[gd_scene load_steps=3 format=3 uid="uid://mainmenu123"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/animated_button.gd" id="2_animated_btn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 48
text = "FPS MULTIPLAYER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SinglePlayerBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 24
text = "싱글플레이"
script = ExtResource("2_animated_btn")

[node name="CreateServerBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.3, 1, 0.7, 1)
theme_override_font_sizes/font_size = 24
text = "서버 생성"
script = ExtResource("2_animated_btn")

[node name="JoinServerBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "서버 참가"
script = ExtResource("2_animated_btn")

[node name="SettingsBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "설정"
script = ExtResource("2_animated_btn")

[node name="QuitBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "종료"
script = ExtResource("2_animated_btn")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v1.0.0 - Multiplayer"
horizontal_alignment = 2
